--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -80,7 +80,7 @@
 
 <!-- To your n8n webhook URL -->
 <form id="contact-form" class="space-y-6" action="https://hallidayinc.app.n8n.cloud/form/866c85c8-d8f0-4cc1-975c-7e5fb0bb36af" method="POST">
-
+</form>
 <!--
 <script>
   const form = document.getElementById('contact-form') as HTMLFormElement;
